--- a/app/auth/templates/dashboard.html
+++ b/app/auth/templates/dashboard.html
@@ -4,13 +4,16 @@
 {% block content %}
     {% from 'bootstrap5/form.html' import render_form, render_field, render_form_row %}
     <div id="row">
-    <h2>Dashboard</h2>
-        <p><b>Welcome</b> {{ current_user.email }} !!!</p>
-    <p>Uploaded songs list</p>
+    <h2>
+        <p><b>Welcome</b> {{ current_user.email }} !!!</p> </h2>
+    <p><h4>Current balance: {{ current_user.current_bal }}</h4> </p>
+
      {{ render_table(data) }}
        {% from 'bootstrap5/pagination.html' import render_pagination %}
 
         {{ render_pagination(pagination) }}
+
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.11.5/js/dataTables.bootstrap5.min.js"></script>
@@ -18,6 +21,7 @@
             $(document).ready(function () {
                 $('.table').DataTable();
             });
+
         </script>
 
 
