--- a/app/songs/templates/browse_songs.html
+++ b/app/songs/templates/browse_songs.html
@@ -9,7 +9,7 @@
 
                 <a href="{{ url_for("songs.songs_upload") }}" class="btn col-3 mb-5 btn-info" role="button">Upload Songs</a>
 
-        <h2>Browse: Songs</h2>
+        <h2><p><h4>Current balance: {{ current_user.current_bal }}</h4> </p></h2>
         {{ render_table(data) }}
         {% from 'bootstrap5/pagination.html' import render_pagination %}
 
