--- a/app/songs/templates/browse_songs.html
+++ b/app/songs/templates/browse_songs.html
@@ -7,7 +7,7 @@
     {% block title %}Browse: {{ record_type }}{% endblock %}
     {% block content %}
 
-                <a href="{{ url_for("songs.songs_upload") }}" class="btn col-3 mb-5 btn-info" role="button">Upload Songs</a>
+                <a href="{{ url_for("songs.songs_upload") }}" class="btn col-3 mb-5 btn-info" role="button">Upload Transaction</a>
 
         <h2><p><h4>Current balance: {{ current_user.current_bal }}</h4> </p></h2>
         {{ render_table(data) }}
